3.9.2/_sources/gallery/lines_bars_and_markers/scatter_hist.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/lines_bars_and_markers/scatter_hist.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. meta::
        :keywords: codex

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_lines_bars_and_markers_scatter_hist.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_lines_bars_and_markers_scatter_hist.py:


============================
Scatter plot with histograms
============================

Show the marginal distributions of a scatter plot as histograms at the sides of
the plot.

For a nice alignment of the main Axes with the marginals, two options are shown
below:

.. contents::
   :local:

While `.Axes.inset_axes` may be a bit more complex, it allows correct handling
of main Axes with a fixed aspect ratio.

An alternative method to produce a similar figure using the ``axes_grid1``
toolkit is shown in the :doc:`/gallery/axes_grid1/scatter_hist_locatable_axes`
example.  Finally, it is also possible to position all Axes in absolute
coordinates using `.Figure.add_axes` (not shown here).

Let us first define a function that takes x and y data as input, as well
as three Axes, the main Axes for the scatter, and two marginal Axes. It will
then create the scatter and histograms inside the provided Axes.

.. GENERATED FROM PYTHON SOURCE LINES 27-57

.. code-block:: Python


    import matplotlib.pyplot as plt
    import numpy as np

    # Fixing random state for reproducibility
    np.random.seed(19680801)

    # some random data
    x = np.random.randn(1000)
    y = np.random.randn(1000)


    def scatter_hist(x, y, ax, ax_histx, ax_histy):
        # no labels
        ax_histx.tick_params(axis="x", labelbottom=False)
        ax_histy.tick_params(axis="y", labelleft=False)

        # the scatter plot:
        ax.scatter(x, y)

        # now determine nice limits by hand:
        binwidth = 0.25
        xymax = max(np.max(np.abs(x)), np.max(np.abs(y)))
        lim = (int(xymax/binwidth) + 1) * binwidth

        bins = np.arange(-lim, lim + binwidth, binwidth)
        ax_histx.hist(x, bins=bins)
        ax_histy.hist(y, bins=bins, orientation='horizontal')









.. GENERATED FROM PYTHON SOURCE LINES 58-63

Defining the Axes positions using a gridspec
--------------------------------------------

We define a gridspec with unequal width- and height-ratios to achieve desired
layout.  Also see the :ref:`arranging_axes` tutorial.

.. GENERATED FROM PYTHON SOURCE LINES 64-81

.. code-block:: Python


    # Start with a square Figure.
    fig = plt.figure(figsize=(6, 6))
    # Add a gridspec with two rows and two columns and a ratio of 1 to 4 between
    # the size of the marginal Axes and the main Axes in both directions.
    # Also adjust the subplot parameters for a square plot.
    gs = fig.add_gridspec(2, 2,  width_ratios=(4, 1), height_ratios=(1, 4),
                          left=0.1, right=0.9, bottom=0.1, top=0.9,
                          wspace=0.05, hspace=0.05)
    # Create the Axes.
    ax = fig.add_subplot(gs[1, 0])
    ax_histx = fig.add_subplot(gs[0, 0], sharex=ax)
    ax_histy = fig.add_subplot(gs[1, 1], sharey=ax)
    # Draw the scatter plot and marginals.
    scatter_hist(x, y, ax, ax_histx, ax_histy)





.. image-sg:: /gallery/lines_bars_and_markers/images/sphx_glr_scatter_hist_001.png
   :alt: scatter hist
   :srcset: /gallery/lines_bars_and_markers/images/sphx_glr_scatter_hist_001.png, /gallery/lines_bars_and_markers/images/sphx_glr_scatter_hist_001_2_00x.png 2.00x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 82-89

Defining the Axes positions using inset_axes
--------------------------------------------

`~.Axes.inset_axes` can be used to position marginals *outside* the main
Axes.  The advantage of doing so is that the aspect ratio of the main Axes
can be fixed, and the marginals will always be drawn relative to the position
of the Axes.

.. GENERATED FROM PYTHON SOURCE LINES 90-111

.. code-block:: Python


    # Create a Figure, which doesn't have to be square.
    fig = plt.figure(layout='constrained')
    # Create the main Axes, leaving 25% of the figure space at the top and on the
    # right to position marginals.
    ax = fig.add_gridspec(top=0.75, right=0.75).subplots()
    # The main Axes' aspect can be fixed.
    ax.set(aspect=1)
    # Create marginal Axes, which have 25% of the size of the main Axes.  Note that
    # the inset Axes are positioned *outside* (on the right and the top) of the
    # main Axes, by specifying axes coordinates greater than 1.  Axes coordinates
    # less than 0 would likewise specify positions on the left and the bottom of
    # the main Axes.
    ax_histx = ax.inset_axes([0, 1.05, 1, 0.25], sharex=ax)
    ax_histy = ax.inset_axes([1.05, 0, 0.25, 1], sharey=ax)
    # Draw the scatter plot and marginals.
    scatter_hist(x, y, ax, ax_histx, ax_histy)

    plt.show()





.. image-sg:: /gallery/lines_bars_and_markers/images/sphx_glr_scatter_hist_002.png
   :alt: scatter hist
   :srcset: /gallery/lines_bars_and_markers/images/sphx_glr_scatter_hist_002.png, /gallery/lines_bars_and_markers/images/sphx_glr_scatter_hist_002_2_00x.png 2.00x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 112-122

.. admonition:: References

   The use of the following functions, methods, classes and modules is shown
   in this example:

   - `matplotlib.figure.Figure.add_subplot`
   - `matplotlib.figure.Figure.add_gridspec`
   - `matplotlib.axes.Axes.inset_axes`
   - `matplotlib.axes.Axes.scatter`
   - `matplotlib.axes.Axes.hist`


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 1.349 seconds)


.. _sphx_glr_download_gallery_lines_bars_and_markers_scatter_hist.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: scatter_hist.ipynb <scatter_hist.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: scatter_hist.py <scatter_hist.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: scatter_hist.zip <scatter_hist.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
